fix: spacing #21

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -471,7 +471,7 @@ p {
 }
 
 .logo {
-    margin: --spacing-md;
+    margin: var(--spacing-sm);
     display: grid;
     grid-template-columns: max-content 1fr;
     grid-template-rows: max-content 1fr;
